--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -1,3 +1,9 @@
+ /* Sencha Variables. */
+ /* General base color for style. */
+/*$base-color: #6699cc;*/
+/* Used for action buttons and active items. */
+/*$active-color: #ff9933;*/
+
 @import 'sencha-touch/default/all';
 
 @include sencha-panel;
