don't play sound in cockpit which manually completed a bill

--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -1,8 +1,8 @@
  /* Sencha Variables. */
  /* General base color for style. */
-/*$base-color: #6699cc;*/
+$base-color: #6699cc;
 /* Used for action buttons and active items. */
-/*$active-color: #ff9933;*/
+$active-color: #ff9933;
 
 @import 'sencha-touch/default/all';
 
