--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -3,6 +3,8 @@
 $base-color: #6699cc;
 /* Used for action buttons and active items. */
 $active-color: #ff9933;
+/* The blue cloobster color */
+$cloobster-font-color: #1E4776;
 
 @import 'sencha-touch/default/all';
 
@@ -137,12 +139,23 @@ $active-color: #ff9933;
 
 }
 
+/* Login */
 .loginbox {
-	background-color: rgb(100,100,200);	
+	background-color: $cloobster-font-color !important;
 }
 
 .loginbox-field {
 	margin-bottom: 0.5em;
+}
+
+/* Login choose business */
+.loginbox-text {
+	text-align: center;
+	color: $cloobster-font-color;
+	
+	h1 {
+		font-size: 1.2em;
+	}
 }
 
 .spotdetail {
